--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,10 @@ jobs:
         java-version: '8'
         distribution: 'temurin'
         cache: maven
+    - name: Clone
+      run: git clone https://github.com/Alluxio/alluxio
+    - name: Change Directory
+      run: cd alluxio
     - name: Build with Maven
       run: mvn clean install -DskipTests -pl core/server/worker -am
     - name: Test without NonDex
