--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
       run: cd alluxio
     - name: print latest commit
       run: git rev-parse HEAD
+    - name: latest commit checkout
+      run: git checkout f361431f3fc78026b52b04e0836ba1398c2d8699
     - name: Build with Maven
       run: mvn clean install -DskipTests -pl core/server/worker -am
     - name: Test without NonDex
