--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,9 @@ jobs:
     - name: print latest commit
       run: git rev-parse HEAD
     - name: Build with Maven
-      run: mvn clean install -DskipTests -pl core/server/worker -am
+      run: mvn clean
+    - name: Separate install
+      run: mvn install -DskipTests -pl core/server/worker -am
     - name: Test without NonDex
       run: mvn -pl core/server/worker test -Dtest=alluxio.worker.block.BlockStoreMetaTest#getBlockList
     - name: Flaky Testing
