Update and rename main.yml. to main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       run: git clone https://github.com/Alluxio/alluxio
     - run: cd alluxio
     
-    - name: Checkout latest commit
+    - name: Checkout commit
       uses: actions/checkout@v3
       with:
         repository: Alluxio/alluxio
